updated intro to ml notebooks

--- a/DAY3/intro-to-ml/machine_learning_solutions.ipynb
+++ b/DAY3/intro-to-ml/machine_learning_solutions.ipynb
@@ -231,7 +231,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the introduction to pandas on Day 2 for details on the data cleaning."
+    "[[ go back to the top ]](#Table-of-contents)\n",
+    "\n",
+    "#### Dataset\n",
+    "\n",
+    "For this lesson, we will be using data from [Galaxy Zoo DR1](https://www.galaxyzoo.org/) and the Sloan Digital Sky Survey (SDSS) ([using the DR9 SQL search](http://skyserver.sdss.org/dr9/en/tools/search/sql.asp)). \n",
+    "\n",
+    "The data dictionary for this dataset is presented in Table 1. This dataset is limited to the first 5,000 Galaxy Zoo classified galaxies which have spectra in the SDSS database. The debiased fraction of the votes in elliptical and spiral categories is given, along with columns identifying systems classified as spiral, elliptical or uncertain.\n",
+    "\n",
+    "<p style=\"text-align:center;font-weight:bold\">Table 1: Data dictionary</p>\n",
+    "\n",
+    "| Column           | Description                                                            |\n",
+    "|:-----------------|:-----------------------------------------------------------------------|\n",
+    "| id               | unique SDSS ID composed of [skyVersion, rerun, run, camcol, field, obj]|\n",
+    "| ra               | right ascension  (HMS)                                                 |\n",
+    "| dec              | declination (DMS)                                                      |\n",
+    "| redshift         | redshift                                                               |\n",
+    "| mag_u            | magnitude _u_ band                                                     |\n",
+    "| mag_g            | magnitude _g_ band                                                     |\n",
+    "| mag_r            | magnitude _r_ band                                                     |\n",
+    "| mag_i            | magnitude _i_ band                                                     |\n",
+    "| mag_z            | magnitude _z_ band                                                     |\n",
+    "| deVRad_r         | de Vaucouleurs scale radius fit in _r_ band                            |\n",
+    "| deVAB_r          | ellipticity from de Vaucouleurs fit in _r_ band                        |\n",
+    "| expRad_r         | exponential scale radius fit in _r_ band                               |\n",
+    "| expAB_r          | ellipticity from exponential fit in _r_ band                           |\n",
+    "| stellar_mass     | log galaxy mass (in units of solar mass)                               |\n",
+    "| votes            | number of Galaxy Zoo annotators                                        |\n",
+    "| p_el_debiased    | debiased labelling probability the galaxy is elliptical                |\n",
+    "| p_cs_debiased    | debiased labelling probability the galaxy is spiral                    |\n",
+    "| spiral           | label = spiral galaxy {0=False, 1=True}                                |\n",
+    "| elliptical       | label = elliptical galaxy {0=False, 1=True}                            |\n",
+    "| uncertain        | label = uncertain {0=False, 1=True}                                    |\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Understand and clean the data\n",
+    "\n",
+    "See the introduction to pandas on Day 2 for details on the data cleaning.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the clean dataset\n",
+    "df = pd.read_csv('data/galaxies-clean.csv')\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The summary table provides some useful information:\n",
+    "\n",
+    "- there are 1,797 galaxies in our dataset\n",
+    "- the mean of the `class` column indicates that ~75.3% of the dataset are spiral galaxies\n",
+    "- min values for the radius columns range from 0.31 to 0.38\n",
+    "- min value for the `stellar_mass` = 8.096\n",
+    "- min value for the `mag` ranging from 15.59 to 18.5\n",
+    "\n",
+    "Our cleaned dataset contains 1,797 galaxies and 75.3% of the records are spiral galaxies."
    ]
   },
   {
@@ -287,6 +355,16 @@
     }
    ],
    "source": [
+    "# Command to show plots inside of the notebook\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sb\n",
+    "\n",
+    "magnitudes = ['mag_u', 'mag_g', 'mag_r', 'mag_i', 'mag_z']\n",
+    "measurements = ['redshift', 'stellar_mass', 'deVRad_r', 'deVAB_r', 'expRad_r', 'expAB_r']\n",
+    "\n",
+    "\n",
     "# Plot scatterplot matrix with all features\n",
     "selected_columns = measurements + magnitudes + ['class']\n",
     "sb.pairplot(df[selected_columns], hue='class', plot_kws={'alpha': 0.3})"
