Updated Intro to Python files on Day 1

--- a/DAY1/Good_coding_practices.ipynb
+++ b/DAY1/Good_coding_practices.ipynb
@@ -33,7 +33,7 @@
     "Either find different modules, rewrite the module (someimtes this is actually not so bad), or just use python 2. The good news is that it's actually not that hard to write code that will work with both python2 and python3.\n",
     "\n",
     "There is a magic command\n",
-    "`from future import ...`\n",
+    "`from __future__ import ...`\n",
     "that lets you use some python3 syntax in python2.\n",
     "\n",
     "For functional differences you can use the module `six` that will help you manage the differences."
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -86,42 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Try a simple math equation and press ctrl/cmd/shift + Enter\n",
-    "2+2"
+    "# Try a simple math equation and press ctrl/shift + Enter\n",
+    "2+2*7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use print() to print something\n",
     "print(\"Hello\")"
@@ -129,19 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run a script from the current directory - my_script.py\n",
     "%run my_script.py"
@@ -167,42 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x75356a0>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAD8CAYAAABXe05zAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADBtJREFUeJzt3U+InIUZx/Hfr7uRbmLrCplLNtLNoVjEUFaGYg14MBbb\nKhpCDynowVJyaTWKKKYXjzkooocihFgvhnqIIYgUY0EvhRKczQqpSQPin5hNxPGwKrLFRJ8eZqf7\nJ5udd5t5932fzPcDQnadzD68JF8m7/vOPI4IAQDy+F7VAwAAVodwA0AyhBsAkiHcAJAM4QaAZAg3\nACRDuAEgGcINAMkQbgBIZriMJ924cWOMj4+X8dQAcFWanJz8PCIaRR5bSrjHx8fVarXKeGoAuCrZ\n/rjoYzlVAgDJEG4ASIZwA0AyhBsAkiHcAJAM4QaAZEq5HRAABsmRqWk9ffS0zs3MatPoiB6/60bt\nmBgr7ecRbgC4AkemprX38AnNXvhWkjQ9M6u9h09IUmnx5lQJAFyBp4+e/l+0u2YvfKunj54u7WcS\nbgC4AudmZlf1/X4g3ABwBTaNjqzq+/1AuAHgCjx+140aWTe06Hsj64b0+F03lvYzuTgJAFegewGS\nu0oAIJEdE2OlhnopTpUAQDKEGwCSIdwAkAzhBoBkCDcAJEO4ASAZwg0AyRBuAEiGcANAMoQbAJIh\n3ACQDOEGgGQINwAkU+jTAW0/Kun3kkLSCUkPRsR/yhwMAHpZ6yW9ddHzFbftMUkPS2pGxM2ShiTt\nKnswAFhJd0nv9MysQvNLeo9MTVc9WumKnioZljRie1jSeknnyhsJAHqrYklvXfQMd0RMS3pG0hlJ\n5yV9ERFvLn2c7d22W7Zb7Xa7/5MCwAJVLOmtiyKnSq6XdJ+kLZI2Sdpg+/6lj4uI/RHRjIhmo9Ho\n/6QAsEAVS3rrosipkjslfRgR7Yi4IOmwpNvKHQsAVlbFkt66KHJXyRlJt9peL2lW0nZJrVKnAoAe\nqljSWxc9wx0Rx2wfknRc0kVJU5L2lz0YAPSy1kt666LQfdwR8ZSkp0qeBQBQAO+cBIBkCDcAJEO4\nASAZwg0AyRBuAEiGcANAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASKbQpwMCwEKDul29\nLgg3gFXpblfvLurtbleXRLzXCKdKAKzKIG9XrwvCDWBVBnm7el0QbgCrMsjb1euCcANYlUHerl4X\nXJwEsCqDvF29Lgg3gFUb1O3qdcGpEgBIhnADQDKEGwCSIdwAkAzhBoBkCDcAJEO4ASAZwg0AyRBu\nAEiGcANAMoQbAJIh3ACQDOEGgGQINwAkU+hjXW2PSjog6WZJIel3EfHPMgcDsDw2rKPo53E/L+mN\niPiN7WskrS9xJgCXwYZ1SAVOldi+TtLtkl6UpIj4JiJmyh4MwKXYsA6p2DnuLZLakl6yPWX7gO0N\nSx9ke7ftlu1Wu93u+6AA2LCOjiLhHpZ0i6QXImJC0teSnlz6oIjYHxHNiGg2Go0+jwlAYsM6OoqE\n+6yksxFxbO7rQ+qEHMAaY8M6pALhjohPJX1iu/snY7ukk6VOBWBZOybGtG/nVo2NjsiSxkZHtG/n\nVi5MDpiid5U8JOng3B0lH0h6sLyRAKyEDesoFO6IeFdSs+RZAAAF8M5JAEiGcANAMoQbAJIh3ACQ\nDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZwA0AyhBsAkiHcAJAM4QaAZIp+rCsw8Niujrog3EABbFdH\nnXCqBCiA7eqoE8INFMB2ddQJ4QYKYLs66oRwAwWwXR11wsVJoIDuBUjuKkEdEG6gILaroy44VQIA\nyRBuAEiGcANAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZwA0AyhBsAkiHcAJBM4XDb\nHrI9Zfv1MgcCAKxsNR/rukfSKUk/LGkWYFlsVwcWK/SK2/ZmSXdLOlDuOMBi3e3q0zOzCs1vVz8y\nNV31aEBlip4qeU7SE5K+K3EW4BJsVwcu1TPctu+R9FlETPZ43G7bLdutdrvdtwEx2NiuDlyqyCvu\nbZLutf2RpFck3WH75aUPioj9EdGMiGaj0ejzmBhUbFcHLtUz3BGxNyI2R8S4pF2S3oqI+0ufDBDb\n1YHlsCwYtcZ2deBSjoi+P2mz2YxWq9X35wWAq5XtyYhoFnks75wEgGQINwAkQ7gBIBnCDQDJEG4A\nSIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDJ8Hjcui+3qQD0Rbiyru129\nu6i3u11dEvEGKsapEiyL7epAfRFuLIvt6kB9EW4si+3qQH0RbiyL7epAfXFxEstiuzpQX4Qbl7Vj\nYoxQAzXEqRIASIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCSIdwA\nkAzhBoBkeobb9g2237Z90vZ7tvesxWAAgOUV+VjXi5Iei4jjtn8gadL23yPiZMmzDTQ2rAO4nJ7h\njojzks7P/for26ckjUki3CVhwzqAlazqHLftcUkTko6VMQw62LAOYCWFw237WkmvSnokIr5c5v/v\ntt2y3Wq32/2cceCwYR3ASgqF2/Y6daJ9MCIOL/eYiNgfEc2IaDYajX7OOHDYsA5gJUXuKrGkFyWd\niohnyx8JbFgHsJIir7i3SXpA0h22353779clzzXQdkyMad/OrRobHZEljY2OaN/OrVyYBCCp2F0l\n/5DkNZgFC7BhHcDl8M5JAEiGcANAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnCDQDJEG4ASIZwA0Ay\nhBsAkiHcAJAM4QaAZAg3ACRTZMv7QGG7OoC6I9wLsF0dQAacKlmA7eoAMiDcC7BdHUAGhHsBtqsD\nyIBwL8B2dQAZcHFyge4FSO4qAVBnhHsJtqsDqDtOlQBAMoQbAJIh3ACQDOEGgGQINwAkQ7gBIBnC\nDQDJEG4ASIZwA0AyhBsAkiHcAJAM4QaAZAg3ACRTKNy2f2n7tO33bT9Z9lAAgMvr+bGutock/VnS\nLySdlfSO7dci4mQ/B2G7OgAUU+QV988kvR8RH0TEN5JekXRfP4foblefnplVaH67+pGp6X7+GAC4\nKhQJ95ikTxZ8fXbue33DdnUAKK5vFydt77bdst1qt9ur+r1sVweA4oqEe1rSDQu+3jz3vUUiYn9E\nNCOi2Wg0VjUE29UBoLgi4X5H0o9tb7F9jaRdkl7r5xBsVweA4nreVRIRF23/UdJRSUOS/hIR7/Vz\nCLarA0Bxjoi+P2mz2YxWq9X35wWAq5XtyYhoFnks75wEgGQINwAkQ7gBIBnCDQDJEG4ASKaUu0ps\ntyV9/H/+9o2SPu/jONlxPOZxLBbjeMy7Go7FjyKi0LsXSwn3lbDdKnpLzCDgeMzjWCzG8Zg3aMeC\nUyUAkAzhBoBk6hju/VUPUDMcj3kci8U4HvMG6ljU7hw3AGBldXzFDQBYQa3CzVLiDts32H7b9knb\n79neU/VMVbM9ZHvK9utVz1I126O2D9n+t+1Ttn9e9UxVsv3o3N+Tf9n+q+3vVz1T2WoT7gVLiX8l\n6SZJv7V9U7VTVeaipMci4iZJt0r6wwAfi649kk5VPURNPC/pjYj4iaSfaoCPi+0xSQ9LakbEzep8\n9PSuaqcqX23CrTVYSpxFRJyPiONzv/5Knb+YA/vh5LY3S7pb0oGqZ6ma7esk3S7pRUmKiG8iYqba\nqSo3LGnE9rCk9ZLOVTxP6eoU7tKXEmdke1zShKRj1U5SqeckPSHpu6oHqYEtktqSXpo7dXTA9oaq\nh6pKRExLekbSGUnnJX0REW9WO1X56hRuLGH7WkmvSnokIr6sep4q2L5H0mcRMVn1LDUxLOkWSS9E\nxISkryUN8vWg69X5l/kWSZskbbB9f7VTla9O4S60lHhQ2F6nTrQPRsThquep0DZJ99r+SJ3TZ3fY\nfrnakSp1VtLZiOj+C+yQOiEfVHdK+jAi2hFxQdJhSbdVPFPp6hTu0pcSZ2Hb6pzDPBURz1Y9T5Ui\nYm9EbI6IcXX+TLwVEVf9K6rLiYhPJX1iu7tJe7ukkxWOVLUzkm61vX7u7812DcDF2p7LgtfKWiwl\nTmSbpAcknbD97tz3/hQRf6twJtTHQ5IOzr3A+UDSgxXPU5mIOGb7kKTj6tyNNaUBeBcl75wEgGTq\ndKoEAFAA4QaAZAg3ACRDuAEgGcINAMkQbgBIhnADQDKEGwCS+S+uDQI1sZGOGgAAAABJRU5ErkJg\ngg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x749d6d8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display matplotlib plots in a cell instead of opening a new tab\n",
     "%matplotlib inline\n",
+    "import matplotlib\n",
     "from matplotlib import pyplot\n",
-    "pyplot.scatter(range(10),range(10))"
+    "pyplot.scatter(range(10),range(10))\n",
+    "pyplot.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -214,24 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Couldn't find program: u'bash'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# interpret this cell as bash code\n",
-    "# Doesn't work on windows because it doesn't have bash\n",
     "%%bash\n",
-    "ls"
+    "ls\n",
+    "for i in 'aff';\n",
+    "do\n",
+    "echo $i\n",
+    "done\n"
    ]
   },
   {
@@ -243,37 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Volume in drive C is OS\n",
-      " Volume Serial Number is AED6-3A16\n",
-      "\n",
-      " Directory of C:\\Users\\PaulHancock\\Documents\\ADACS-obs-workshop\\DAY1\n",
-      "\n",
-      "11/11/2017  10:53 PM    <DIR>          .\n",
-      "11/11/2017  10:53 PM    <DIR>          ..\n",
-      "11/11/2017  09:38 PM    <DIR>          .ipynb_checkpoints\n",
-      "11/11/2017  10:53 PM            48,819 Good_coding_practices.ipynb\n",
-      "11/11/2017  07:40 PM            14,710 Intro_to_python.ipynb\n",
-      "11/11/2017  09:13 PM            41,615 Intro_to_python_answers.ipynb\n",
-      "11/11/2017  07:40 PM            58,876 Introduction to version control with git.html\n",
-      "11/11/2017  09:09 PM    <DIR>          Introduction to version control with git_files\n",
-      "11/11/2017  07:40 PM                20 my_script.py\n",
-      "11/11/2017  09:09 PM    <DIR>          python-viz\n",
-      "11/11/2017  07:40 PM               964 README.md\n",
-      "11/11/2017  07:40 PM         1,798,475 version-control.pdf\n",
-      "               7 File(s)      1,963,479 bytes\n",
-      "               5 Dir(s)  10,521,886,720 bytes free\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls"
    ]
@@ -287,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "%"
+    "%%"
    ]
   },
   {
@@ -326,6 +248,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 Loops!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -349,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
